; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/libsodium/src/libsodium/crypto_box/extr_crypto_box_easy.c_crypto_box_easy_afternm.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/libsodium/src/libsodium/crypto_box/extr_crypto_box_easy.c_crypto_box_easy_afternm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_MESSAGEBYTES_MAX = common dso_local global i64 0, align 8
@crypto_box_MACBYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_box_easy_afternm(i8* %0, i8* %1, i64 %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* @crypto_box_MESSAGEBYTES_MAX, align 8
  %13 = icmp ugt i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = call i32 (...) @sodium_misuse()
  br label %16

16:                                               ; preds = %14, %5
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* @crypto_box_MACBYTES, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i8*, i8** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @crypto_box_detached_afternm(i8* %20, i8* %21, i8* %22, i64 %23, i8* %24, i8* %25)
  ret i32 %26
}

declare dso_local i32 @sodium_misuse(...) #1

declare dso_local i32 @crypto_box_detached_afternm(i8*, i8*, i8*, i64, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
